--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,13 +1,71 @@
 group 'com.bolyartech.scram_sasl'
-version '1.0-SNAPSHOT'
+version '1.0.1'
 
 apply plugin: 'java'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
 
 
 repositories {
     mavenCentral()
 }
 
+buildscript {
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+// custom tasks for creating source/javadoc jars
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar//, javadocJar
+}
+
+apply from: 'bintray-config.gradle'
+
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
+            from components.java
+            groupId 'com.bolyartech.scram_sasl'
+            artifactId 'scram_sasl'
+            version '1.0.1'
+            artifact sourcesJar
+        }
+    }
+}
+
+
+bintray {
+    configurations = ['archives']
+    pkg {
+        repo = 'maven'
+        name = 'scram-sasl'
+        userOrg = 'ogibankov'
+        licenses = ['Apache-2.0']
+        websiteUrl = 'https://github.com/ogrebgr/scram-sasl'
+        issueTrackerUrl = 'https://github.com/ogrebgr/scram-sasl/issues'
+        vcsUrl = 'git@github.com:ogrebgr/scram-sasl.git'
+        version {
+            name = '1.0.1'
+            desc = 'SCRAM SASL'
+            vcsTag = '1.0.1'
+        }
+    }
+    publications = ['MyPublication']
+}
+
+
