--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,9 +1,12 @@
 group 'com.bolyartech.scram_sasl'
-version '1.0.1'
+version '1.0.2'
 
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
+
+targetCompatibility = '1.7'
+sourceCompatibility = '1.7'
 
 
 repositories {
@@ -42,7 +45,7 @@ publishing {
             from components.java
             groupId 'com.bolyartech.scram_sasl'
             artifactId 'scram_sasl'
-            version '1.0.1'
+            version '1.0.2'
             artifact sourcesJar
         }
     }
@@ -60,9 +63,9 @@ bintray {
         issueTrackerUrl = 'https://github.com/ogrebgr/scram-sasl/issues'
         vcsUrl = 'git@github.com:ogrebgr/scram-sasl.git'
         version {
-            name = '1.0.1'
+            name = '1.0.2'
             desc = 'SCRAM SASL'
-            vcsTag = '1.0.1'
+            vcsTag = '1.0.2'
         }
     }
     publications = ['MyPublication']
