bugfix: was unable to build if private signing config file was not found

--- a/lib/bintray-config.gradle
+++ b/lib/bintray-config.gradle
@@ -1,1 +1,5 @@
-apply from: '/home/ogre/.signing/bintray-config.gradle'
+def fileBc = new File( '/home/ogre/.signing/bintray-config.gradle' )
+
+if (fileBc.exists()) {
+    apply from: '/home/ogre/.signing/bintray-config.gradle1'
+}
