bugfix: wrogn file name

--- a/lib/bintray-config.gradle
+++ b/lib/bintray-config.gradle
@@ -1,5 +1,5 @@
 def fileBc = new File( '/home/ogre/.signing/bintray-config.gradle' )
 
 if (fileBc.exists()) {
-    apply from: '/home/ogre/.signing/bintray-config.gradle1'
+    apply from: '/home/ogre/.signing/bintray-config.gradle'
 }
